# Stockbot

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  designdoc.md  pyproject.toml
.claude/: settings.local.json
deploy/: Caddyfile.pi-snippet  stockbot-random.service  stockbot-wake.service  stockbot-wake.timer  stockbot-web.service
scripts/: check_account.py  ingest_data.py  live_ml.py  live_portfolio.py  optimize.py  random_portfolio.py  risk_dashboard.py  run_backtest.py  run_ml.py  run_paper.py  run_with_selector.py  serve_web.py  train_ml.py  train_portfolio.py  train_selector.py
src/stockbot/: __init__.py
src/stockbot/config/: __init__.py  settings.py  universe.py
src/stockbot/core/: __init__.py  exceptions.py  interfaces.py  models.py  types.py
src/stockbot/data/: __init__.py  storage.py
src/stockbot/engine/: __init__.py  backtest.py  clock.py  context.py  paper.py
src/stockbot/execution/: __init__.py  broker_alpaca.py  broker_sim.py  order_manager.py  translator.py
src/stockbot/learning/: __init__.py  callbacks.py  features.py  optimizer.py  portfolio_agent.py  rl_agent.py  selector.py
src/stockbot/monitoring/: __init__.py  logger.py  metrics.py
src/stockbot/random_bot/: __init__.py  allocator.py  pdt.py  universe_source.py
src/stockbot/risk/: __init__.py  exposure.py  kill_switch.py  manager.py  position_sizer.py  rules.py
src/stockbot/strategy/: __init__.py  base.py  baseline.py
src/stockbot/web/: __init__.py  accounting.py  app.py  db.py  metrics.py  recorder.py
tests/: __init__.py  conftest.py  test_models.py  test_random_bot.py  test_strategy.py  test_web_db.py
(+7 files in other folders)
