[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockbot"
version = "0.1.0"
description = "Automated trading platform with backtesting and live execution"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Stockbot Team" }
]

dependencies = [
    "alpaca-py>=0.21.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
stockbot-ingest = "stockbot.scripts.ingest_data:main"
stockbot-backtest = "stockbot.scripts.run_backtest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stockbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["stockbot"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
